added login & registration screens

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,10 +3,10 @@
 	<head>
 		<title>BSC</title>
 		<link rel="stylesheet" href="/static/forms.css">
-		<link rel="icon" href= "icon.png">
+		<link rel="icon" href= "/static/con.png">
 	</head>
 
-	<body background = "background.jpg">
+	<body background = "/static/background.jpg">
 		<div id="horizon">
     		<div id="content">
 				<form action="submit.php" method="POST" autocomplete = "on">
