added virality score to score computation

--- a/templates/login.html
+++ b/templates/login.html
@@ -3,7 +3,7 @@
 	<head>
 		<title>BSC</title>
 		<link rel="stylesheet" href="/static/forms.css">
-		<link rel="icon" href= "/static/con.png">
+		<link rel="icon" href= "/static/icon.png">
 	</head>
 
 	<body background = "/static/background.jpg">
@@ -16,7 +16,7 @@
 						Enter
 
 						<span class = "headline">
-							<a href="login.html">
+							<a href="/login">
 								Box Score Chatter
 							</a>
 						</span> 
@@ -44,7 +44,7 @@
 
 						<!-- forgot password link -->
 						<span>
-							<a href="forgot.html" class = "bodytext"> 
+							<a href="/forgot" class = "bodytext"> 
 								Forgot Password? 
 							</a>
 						</span>
@@ -57,7 +57,7 @@
 
 					<span class = "bodytext"> 
 						Don't have an account? 
-						<a href="register.html" class = "bodytext"> 
+						<a href="/register" class = "bodytext"> 
 							Sign Up >> 
 						</a> 
 					</span><br>
