--- a/templates/register.html
+++ b/templates/register.html
@@ -15,7 +15,7 @@
 						Join 
 
 						<span class = "headline">
-							<a href="login.html">
+							<a href="/login">
 								Box Score Chatter
 							</a>
 						</span> 
@@ -48,7 +48,7 @@
 
 					<span class = "bodytext">
 						Already have an account? 
-						<a href="login.html"> 
+						<a href="/login"> 
 							Log in Here >>
 						</a>
 					</span><br>
