--- a/templates/forgot.html
+++ b/templates/forgot.html
@@ -13,7 +13,7 @@
 					<span> 
 						Reset
 						<span class = "headline">
-							<a href="login.html">
+							<a href="/login">
 								Box Score Chatter
 							</a>
 						</span> 
@@ -30,14 +30,14 @@
 
 					<span class = "bodytext">
 						Already have an account? 
-						<a href="login.html"> 
+						<a href="/login"> 
 							Log in Here >>
 						</a>
 					</span><br>
 
 					<span class = "bodytext"> 
 						Don't have an account? 
-						<a href="register.html" class = "bodytext"> 
+						<a href="/register" class = "bodytext"> 
 							Sign Up >> 
 						</a> 
 					</span><br>
