working on registration

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,7 +9,7 @@
 	<body background = "/static/background.jpg">
 		<div id="horizon">
     		<div id="content">
-				<form action="/login" method="POST" autocomplete = "on">
+				<form action="/login_user" method="POST" autocomplete = "on">
 
 					<!-- Title -->
 					<span>
