--- a/templates/register.html
+++ b/templates/register.html
@@ -11,7 +11,7 @@
 	<body background = "/static/background.jpg">
 		<div id="horizon">
     		<div id="content">			
-				<form action="/register"  id = "#user-add-form" method = "POST" autocomplete = "on" >
+				<form action="/register_user"  id = "#user-add-form" method = "POST" autocomplete = "on" >
 					<!-- Title -->
 					<span>
 						Join 
