Working on login

--- a/templates/login.html
+++ b/templates/login.html
@@ -26,7 +26,7 @@
 
 					<!-- username form element -->
 					<span>
-						<input name = "username" type = "email" placeholder="Email" required class = "text_box">
+						<input name = "email" type = "email" placeholder="Email" required class = "text_box">
 					</span>
 
 					<!-- password form element -->
