--- a/templates/home.html
+++ b/templates/home.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-        <link rel="stylesheet" type="text/css" href="../static/home.css">
+        <link rel="stylesheet" type="text/css" href="/static/home.css">
         <link href='https://fonts.googleapis.com/css?family=Raleway:300' rel='stylesheet' type='text/css'>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
 		<script src="/static/home.js"></script>
@@ -22,8 +22,8 @@
         <div class="dropdown">
             <button class="dropbtn">Welcome First Last</button>
             <div class="dropdown-content">
-                <a href="customize.html">Customize</a>
-                <a href="#">Logout</a>
+                <a href="/customize">Customize</a>
+                <a href="/logout">Logout</a>
             </div>
         </div>
 
