added customize screen

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -125,11 +125,11 @@
 
 		<div id = "horizon">
     		<div id="content">			
-				<form action="/" method = "POST" autocomplete = "on" >
+				<form action="/post_customize" method = "POST" autocomplete = "on" >
 					<span> 
 						Customize 
 						<span class = "headline">
-							<a href="/login">
+							<a href="/">
 								Box Score Chatter
 							</a>
 						</span> 
@@ -156,7 +156,7 @@
 
 					<span>
 						<input type = "submit" value = "Confirm" class="button" class = "text_box"></input>
-						<input type = "submit" value = "Go Back" class="button" class = "text_box"></input>
+						<input type = "submit"  action="/" value = "Go Back" class="button" class = "text_box"></input>
 						<hr>
 					</span> 
 
