--- a/templates/custom.html
+++ b/templates/custom.html
@@ -156,7 +156,7 @@
 
 					<span>
 						<input type = "submit" value = "Confirm" class="button" class = "text_box"></input>
-						<input type = "submit"  action="/" value = "Go Back" class="button" class = "text_box"></input>
+						<input action="/" value = "Go Back" class="button" class = "text_box"></input>
 						<hr>
 					</span> 
 
