added customize screen

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -156,7 +156,9 @@
 
 					<span>
 						<input type = "submit" value = "Confirm" class="button" class = "text_box"></input>
-						<input type = "button"  action="/" value = "Go Back" class="button" class = "text_box"></input>
+						<form method="get" action="/">
+							<input type = "button" value = "Go Back" class="button" class = "text_box"></input>
+						</form>
 						<hr>
 					</span> 
 
