--- a/templates/team_name.html
+++ b/templates/team_name.html
@@ -33,28 +33,28 @@
                     </a>
                 </li>
                 <li class="hex">
-                    <a class="hexIn" href="teams/Celtics/">
+                    <a class="hexIn" href="/teams/Celtics/">
                         <img src="/static/celtics.jpg">
     			        <h1>Boston Celtics</h1>
     			        <p>Click here to view the most relavent tweets about the Boston Celtics.</p>
                     </a>
                 </li>
                 <li class="hex">
-                    <a class="hexIn" href="teams/Lakers/">
+                    <a class="hexIn" href="/teams/Lakers/">
                         <img src="/static/lakers.jpg">
     			        <h1>Los Angeles Lakers</h1>
     			        <p>Click here to view the most relavent tweets about the LA Lakers.</p>
                     </a>
                 </li>
                 <li class="hex">
-                    <a class="hexIn" href="teams/Knicks/">
+                    <a class="hexIn" href="/teams/Knicks/">
                         <img src="/static/knicks.jpg">
     			        <h1>New York Knicks</h1>
     			        <p>Click here to view the most relavent tweets about the NY Knicks.</p>
                     </a>
                 </li>
                 <li class="hex">
-                    <a class="hexIn" href="teams/Warriors/">
+                    <a class="hexIn" href="/teams/Warriors/">
                         <img src="/static/warriors.jpg">
     		        	<h1>Golden State Warriors</h1>
     		       		<p>Click here to view the most relavent tweets about the Golden State Warriors.</p>
