added customize screen

--- a/templates/team_name.html
+++ b/templates/team_name.html
@@ -17,8 +17,8 @@
 	<div class="dropdown">
             <button class="dropbtn">Welcome First Last</button>
             <div class="dropdown-content">
-                <a href="#">Customize</a>
-                <a href="#">Logout</a>
+                <a href="/customize">Customize</a>
+                <a href="/logout">Logout</a>
             </div>
         </div>
 
