added customize screen

--- a/templates/home.html
+++ b/templates/home.html
@@ -20,7 +20,7 @@
         </div>
 
         <div class="dropdown">
-            <button class="dropbtn">Welcome First Last</button>
+            <button class="dropbtn">Welcome {% email %}</button>
             <div class="dropdown-content">
                 <a href="/customize">Customize</a>
                 <a href="/logout">Logout</a>
