adding message screen

--- a/templates/message.html
+++ b/templates/message.html
@@ -9,7 +9,6 @@
 	<body background = "/static/background.jpg">
 		<div id = "horizon">
     		<div id="content">			
-				<form action="submit.php" method = "POST" autocomplete = "on" >
 					<span> 
 						
 						<span class = "headline">
@@ -20,7 +19,7 @@
 						
 					</span>
 					<hr>
-					<p> Account created successfully!</p>
+					<p> {{ message }}</p>
 					<hr>
 
 					<span class = "bodytext">
@@ -29,6 +28,7 @@
 							Log in Here >> <br>
 						</a>
 					</span><br>
+					
 
 					
  					<span class = "bodytext footer" >
