--- a/templates/message.html
+++ b/templates/message.html
@@ -8,7 +8,8 @@
 
 	<body background = "/static/background.jpg">
 		<div id = "horizon">
-    		<div id="content">			
+    		<div id="content">		
+    		<form action="submit.php" method = "POST" autocomplete = "on" >	
 					<span> 
 						
 						<span class = "headline">
