--- a/templates/custom.html
+++ b/templates/custom.html
@@ -138,19 +138,19 @@
 
 					<hr>
 
-				    <input value = "0" type="range" min="0" max="3" step = "1" onchange="updateTextInput1(this.value);">       
+				    <input value = "0" type="range" name="viralityRangeInput" min="0" max="3" step = "1" onchange="updateTextInput1(this.value);">       
 					                                                 
 				     <input type="hidden" id="textInput1" value = "0" >
 					<p id = "demo"> <b>Virality:</b> I <b>don't care</b> about viral tweets.</p> </br>
 
-					<input value = "0" type="range" name="rangeInput" min="0" max="3" step = "1" onchange="updateTextInput2(this.value);">    
+					<input value = "0" type="range" name="timeRangeInput" min="0" max="3" step = "1" onchange="updateTextInput2(this.value);">    
 
 					<input type="hidden" id="textInput2" value = "0" >
 				                                          
 
 					<p id = "demo2"> <b>Time</b>: I <b>don't care</b> when the tweets were tweeted. </p></br>
 
-					<input value = "2" type="range" name="rangeInput" min="0" max="3" step = "1" onchange="updateTextInput3(this.value); ">                                                         
+					<input value = "2" type="range" name="relevanceRangeInput" min="0" max="3" step = "1" onchange="updateTextInput3(this.value); ">                                                         
 					<input type="hidden" id="textInput3" value = "2" >
 					<p id = "demo3"> <b>Keywords</b>: I <b>don't care</b> if the tweet contains your keywords. </p></br>
 
