working on customization

--- a/templates/message.html
+++ b/templates/message.html
@@ -13,7 +13,7 @@
 					<span> 
 						
 						<span class = "headline">
-							<a href="/login">
+							<a href="/">
 								Box Score Chatter
 							</a>
 						</span> 
