working on customization

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -123,6 +123,9 @@
 
 	<body background = "/static/background.jpg"> 
 
+		<div id = "virality"> {{ virality }} </div>
+		<div id = "time"> {{ time }} </div>
+		<div id = "relevance"> {{ relevance }} </div>
 		<div id = "horizon">
     		<div id="content">			
 				<form action="/post_customize" method = "POST" autocomplete = "on" >
