working on customization

--- a/templates/custom.html
+++ b/templates/custom.html
@@ -4,7 +4,7 @@
   		<title> Customize Your Subscription </title>
   		<link rel="stylesheet" href="/static/slider.css">
   		<link rel="icon" href= "/static/icon.png">
-	  	<script type="text/javascript">
+	  	<script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js">
 		    function updateTextInput1(val1) {
 				document.getElementById('textInput1').value=val1;
 				if (val1 == 0) {
